force-app/main/default/objects/Torc_Job_Opportunity__c/Torc_Job_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Torc Job Opportunity</label>
    <nameField>
        <label>Torc Job Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torc Job Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>