force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Auto_Created_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Created Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Torc Job Opportunities</relationshipLabel>
    <relationshipName>Torc_Job_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>