force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Customer_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_Company__c</fullName>
    <description>Company Name provided by the Creator when he signed up as a customer</description>
    <formula>Torc_Customer__r.company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Company Name provided by the Creator when he signed up as a customer. For normal users the Organization and Customer Company will be same. For Sales Reps / Admins it can be different, if the Sales Rep creates job on behalf of others.</inlineHelpText>
    <label>Customer Company</label>
    <type>Text</type>
</CustomField>