force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Customer_Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_Company__c</fullName>
    <formula>customerOwner__r.company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner Company</label>
    <type>Text</type>
</CustomField>