force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Customer_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_Country__c</fullName>
    <formula>customerOwner__r.countryName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner Country</label>
    <type>Text</type>
</CustomField>