force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Customer_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_Email__c</fullName>
    <formula>customerOwner__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner Email</label>
    <type>Text</type>
</CustomField>