force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Customer_Owner_region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_region__c</fullName>
    <formula>customerOwner__r.Region2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Owner region</label>
    <type>Text</type>
</CustomField>