force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Customer_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner_User__c</fullName>
    <label>Customer Owner User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>