force-app/main/default/objects/Torc_Job_Opportunity__c/fields/customerId__c.field-meta.xml
<CustomField>
    <fullName>customerId__c</fullName>
    <label>Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>