force-app/main/default/objects/Torc_Job_Opportunity__c/fields/customerOwner__c.field-meta.xml
<CustomField>
    <fullName>customerOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>customerOwner</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Job Opportunities (customerOwner)</relationshipLabel>
    <relationshipName>Torc_Job_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>