force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Days_From_Active_To_First_Apply__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Active_To_First_Apply__c</fullName>
    <formula>IF(OR(Activated_At__c=NULL,  First_Applied_At__c =NULL),NULL, First_Applied_At__c - Activated_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Active To First Apply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>