force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Days_From_Active_To_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Active_To_Fulfilled__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Activated_At__c)), NOT(ISNULL( Fulfilled_At__c ))),
DATEVALUE(Fulfilled_At__c) - DATEVALUE(Activated_At__c),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Active To Fulfilled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>