force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Days_From_PendingAp_To_First_Shortlisted__c.field-meta.xml
<CustomField>
    <fullName>Days_From_PendingAp_To_First_Shortlisted__c</fullName>
    <formula>IF(OR(PendingApproval_At__c=NULL, First_Shortlisted_At__c =NULL),NULL, First_Shortlisted_At__c - PendingApproval_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From PendingAp To First Shortlisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>