force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Days_since_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Active__c</fullName>
    <formula>TODAY() - DATEVALUE(Activated_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>