force-app/main/default/objects/Torc_Job_Opportunity__c/fields/employmentType__c.field-meta.xml
<CustomField>
    <fullName>employmentType__c</fullName>
    <label>employmentType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>