force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Ever_Applied_Count__c.field-meta.xml
<CustomField>
    <fullName>Ever_Applied_Count__c</fullName>
    <label>Ever Applied Count</label>
    <summaryFilterItems>
        <field>Torc_Match__c.Ever_Applied__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Torc_Match__c.Torc_Job_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>