force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Ever_Matched_Count__c.field-meta.xml
<CustomField>
    <fullName>Ever_Matched_Count__c</fullName>
    <label>Ever Matched Count</label>
    <summaryFilterItems>
        <field>Torc_Match__c.status__c</field>
        <operation>equals</operation>
        <value>ACCEPTED,APPLIED,INTERESTEDFASTTRACK,MATCHED,MOREINFO,REJECTEDBYCUSTOMER,REJECTEDBYMEMBER</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Torc_Match__c.Delete_From_Platform__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Torc_Match__c.Torc_Job_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>