force-app/main/default/objects/Torc_Job_Opportunity__c/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>