force-app/main/default/objects/Torc_Job_Opportunity__c/fields/externalJobId__c.field-meta.xml
<CustomField>
    <fullName>externalJobId__c</fullName>
    <label>externalJobId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>