force-app/main/default/objects/Torc_Job_Opportunity__c/fields/FINALIST__c.field-meta.xml
<CustomField>
    <fullName>FINALIST__c</fullName>
    <label>#FINALIST</label>
    <summaryFilterItems>
        <field>Torc_Match__c.subStatus__c</field>
        <operation>equals</operation>
        <value>FINALIST</value>
    </summaryFilterItems>
    <summaryForeignKey>Torc_Match__c.Torc_Job_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>