force-app/main/default/objects/Torc_Job_Opportunity__c/fields/First_Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>First_Accepted_At__c</fullName>
    <label>First Accepted At</label>
    <summarizedField>Torc_Match__c.Accepted_At__c</summarizedField>
    <summaryForeignKey>Torc_Match__c.Torc_Job_Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>