force-app/main/default/objects/Torc_Job_Opportunity__c/fields/First_Shortlisted_At__c.field-meta.xml
<CustomField>
    <fullName>First_Shortlisted_At__c</fullName>
    <label>First Shortlisted At</label>
    <summarizedField>Torc_Match__c.Shortlisted_At__c</summarizedField>
    <summaryFilterItems>
        <field>Torc_Match__c.Shortlisted_At__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Torc_Match__c.Delete_From_Platform__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Torc_Match__c.Torc_Job_Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>