force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Fulfilled_At__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_At__c</fullName>
    <formula>IF(status__c =&apos;FULFILLED&apos;, Last_Accepted_At__c ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfilled At</label>
    <type>DateTime</type>
</CustomField>