force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Job_in_Platform__c.field-meta.xml
<CustomField>
    <fullName>Job_in_Platform__c</fullName>
    <formula>HYPERLINK(
&apos;https://platform.torc.dev/#/jobs/opportunities/&apos;+ External_id__c +&apos;/preview&apos;, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job in Platform</label>
    <type>Text</type>
</CustomField>