force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Job_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_URL__c</fullName>
    <formula>HYPERLINK(
&apos;https://platform.opentorc.com/#/jobs/opportunities/&apos;+ External_id__c +&apos;/preview&apos;,&apos;Job In Platform&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job URL</label>
    <type>Text</type>
</CustomField>