force-app/main/default/objects/Torc_Job_Opportunity__c/fields/jobLength__c.field-meta.xml
<CustomField>
    <fullName>jobLength__c</fullName>
    <label>Job Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>