force-app/main/default/objects/Torc_Job_Opportunity__c/fields/jobLengthInWeeks__c.field-meta.xml
<CustomField>
    <fullName>jobLengthInWeeks__c</fullName>
    <label>Job Length In Weeks</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>