force-app/main/default/objects/Torc_Job_Opportunity__c/fields/jobTypeId__c.field-meta.xml
<CustomField>
    <fullName>jobTypeId__c</fullName>
    <externalId>true</externalId>
    <label>Job Type Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>