force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Match_Count__c.field-meta.xml
<CustomField>
    <fullName>Match_Count__c</fullName>
    <formula>TOTAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>