force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Matched_Report__c.field-meta.xml
<CustomField>
    <fullName>Matched_Report__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Report/00O8Z000007mQ9V/view?fv0=&apos;+ External_id__c   
, &apos;Matches&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Report</label>
    <type>Text</type>
</CustomField>