force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Matches_Per_Position__c.field-meta.xml
<CustomField>
    <fullName>Matches_Per_Position__c</fullName>
    <formula>Ever_Matched_Count__c / requiredPositions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matches Per Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>