force-app/main/default/objects/Torc_Job_Opportunity__c/fields/maxRate__c.field-meta.xml
<CustomField>
    <fullName>maxRate__c</fullName>
    <label>Max Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>