force-app/main/default/objects/Torc_Job_Opportunity__c/fields/maxSalary__c.field-meta.xml
<CustomField>
    <fullName>maxSalary__c</fullName>
    <label>maxSalary</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>