force-app/main/default/objects/Torc_Job_Opportunity__c/fields/minRate__c.field-meta.xml
<CustomField>
    <fullName>minRate__c</fullName>
    <label>Min Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>