force-app/main/default/objects/Torc_Job_Opportunity__c/fields/minSalary__c.field-meta.xml
<CustomField>
    <fullName>minSalary__c</fullName>
    <label>minSalary</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>