force-app/main/default/objects/Torc_Job_Opportunity__c/fields/openPositions__c.field-meta.xml
<CustomField>
    <fullName>openPositions__c</fullName>
    <label>openPositions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>