force-app/main/default/objects/Torc_Job_Opportunity__c/fields/organization__c.field-meta.xml
<CustomField>
    <fullName>organization__c</fullName>
    <inlineHelpText>Job Opportunity related to Company</inlineHelpText>
    <label>Organization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>