force-app/main/default/objects/Torc_Job_Opportunity__c/fields/overview__c.field-meta.xml
<CustomField>
    <fullName>overview__c</fullName>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>