force-app/main/default/objects/Torc_Job_Opportunity__c/fields/PendingApproval_At__c.field-meta.xml
<CustomField>
    <fullName>PendingApproval_At__c</fullName>
    <label>PendingApproval At</label>
    <type>DateTime</type>
</CustomField>