force-app/main/default/objects/Torc_Job_Opportunity__c/fields/priorityLevel__c.field-meta.xml
<CustomField>
    <fullName>priorityLevel__c</fullName>
    <label>priorityLevel</label>
    <length>5</length>
    <type>Text</type>
</CustomField>