force-app/main/default/objects/Torc_Job_Opportunity__c/fields/regions__c.field-meta.xml
<CustomField>
    <fullName>regions__c</fullName>
    <label>Regions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>