force-app/main/default/objects/Torc_Job_Opportunity__c/fields/requiredExperience__c.field-meta.xml
<CustomField>
    <fullName>requiredExperience__c</fullName>
    <label>requiredExperience</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>