force-app/main/default/objects/Torc_Job_Opportunity__c/fields/requiredPositions__c.field-meta.xml
<CustomField>
    <fullName>requiredPositions__c</fullName>
    <label>requiredPositions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>