force-app/main/default/objects/Torc_Job_Opportunity__c/fields/requirements__c.field-meta.xml
<CustomField>
    <fullName>requirements__c</fullName>
    <label>Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>