force-app/main/default/objects/Torc_Job_Opportunity__c/fields/responsibilities__c.field-meta.xml
<CustomField>
    <fullName>responsibilities__c</fullName>
    <label>Responsibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>