force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Salesforce_Account__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Torc Job Opportunities</relationshipLabel>
    <relationshipName>Torc_Job_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>