force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Search_Tool_URL__c.field-meta.xml
<CustomField>
    <fullName>Search_Tool_URL__c</fullName>
    <formula>HYPERLink(&apos;https://search.opentorc.com/jobOpps/&apos;+ External_id__c +&apos;/details&apos;,&apos;Search Tool URL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Tool URL</label>
    <type>Text</type>
</CustomField>