force-app/main/default/objects/Torc_Job_Opportunity__c/fields/shortDescription__c.field-meta.xml
<CustomField>
    <fullName>shortDescription__c</fullName>
    <label>shortDescription</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>