force-app/main/default/objects/Torc_Job_Opportunity__c/fields/skills__c.field-meta.xml
<CustomField>
    <fullName>skills__c</fullName>
    <label>Skills</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>