force-app/main/default/objects/Torc_Job_Opportunity__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <label>source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>