force-app/main/default/objects/Torc_Job_Opportunity__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>