force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Talent_Owner__c.field-meta.xml
<CustomField>
    <fullName>Talent_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Owner</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Job Opportunities (Talent Owner)</relationshipLabel>
    <relationshipName>Torc_Job_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>