force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Talent_Owner_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Talent_Owner_Cohort__c</fullName>
    <formula>TEXT(Talent_Owner__r.Recruiter_Cohort__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent Owner Cohort</label>
    <type>Text</type>
</CustomField>