force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Talent_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Talent_Owner_Id__c</fullName>
    <label>Talent Owner Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>