force-app/main/default/objects/Torc_Job_Opportunity__c/fields/timeCommitment__c.field-meta.xml
<CustomField>
    <fullName>timeCommitment__c</fullName>
    <label>Time Commitment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>