force-app/main/default/objects/Torc_Job_Opportunity__c/fields/timeOverlap__c.field-meta.xml
<CustomField>
    <fullName>timeOverlap__c</fullName>
    <label>Time Overlap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>