force-app/main/default/objects/Torc_Job_Opportunity__c/fields/timezone__c.field-meta.xml
<CustomField>
    <fullName>timezone__c</fullName>
    <label>TimeZone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>