force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Torc_Customer__c.field-meta.xml
<CustomField>
    <fullName>Torc_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc Customer</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Customers Opportunities</relationshipLabel>
    <relationshipName>Customers_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>