force-app/main/default/objects/Torc_Job_Opportunity__c/fields/Torc_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Torc_Job_Type__c</fullName>
    <label>Torc Job Type</label>
    <referenceTo>Torc_Job_Type__c</referenceTo>
    <relationshipLabel>Torc Job Opportunities</relationshipLabel>
    <relationshipName>Torc_Job_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>