force-app/main/default/objects/Torc_Job_Opportunity__c/fields/torcOwner__c.field-meta.xml
<CustomField>
    <fullName>torcOwner__c</fullName>
    <label>torcOwner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>