force-app/main/default/objects/Torc_Job_Opportunity__c/fields/workMode__c.field-meta.xml
<CustomField>
    <fullName>workMode__c</fullName>
    <label>workMode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>