force-app/main/default/objects/Torc_Job_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>createdAt__c</columns>
    <columns>updatedAt__c</columns>
    <columns>Torc_Customer__c</columns>
    <columns>Customer_Company__c</columns>
    <columns>organization__c</columns>
    <columns>TOTAL__c</columns>
    <columns>status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>